adding colour viewer

--- a/SpeckleRhinoJS/package.json
+++ b/SpeckleRhinoJS/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "debounce": "^1.0.2",
     "event-emitter-es6": "^1.1.5",
     "moment": "^2.18.1",
     "three": "^0.86.0",
     "vue": "2.2.1",
+    "vue-color": "^2.2.0",
     "vue-material": "^0.7.1",
     "vuex": "^2.3.1"
   },
