Adding objects to Rhino Document.  Still missing LayerMaterials.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ packages/
 SpeckleRhinoChromium/bin/
 SpeckleRhinoChromium/obj/
 SpeckleRhinoJS/node_modules/
+SpeckleRhinoJS/bin/
+SpeckleRhinoJS/obj/Release/CoreCompileInputs.cache
+SpeckleRhinoJS/obj/
