--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ SpeckleRhinoJS/node_modules/
 SpeckleRhinoJS/bin/
 SpeckleRhinoJS/obj/Release/CoreCompileInputs.cache
 SpeckleRhinoJS/obj/
+SpeckleRhino/bin/
+SpeckleRhino/obj/
